disable_junit: disable junit, update dependencies, turn off metrics

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -97,7 +97,7 @@ metrics {
   durationUnit = SECONDS
   showSamples = true
   jvm = true
-  enabled = true
+  enabled = false
 }
 
 # Microservice specific config
