--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,7 +103,7 @@ metrics {
 # Microservice specific config
 
 auditing {
-  enabled = false
+  enabled = true
   traceRequests = true
   consumer {
     baseUri {
