DAC6-237: WIP for ttl index

--- a/it/resources/it.application.conf
+++ b/it/resources/it.application.conf
@@ -1,3 +1,15 @@
 include "application.conf"
 
-mongodb.uri = "mongodb://localhost:27017/disclose-cross-border-arrangements"
+mongodb.uri = "mongodb://localhost:27017/disclose-cross-border-arrangements-integration"
+
+akka {
+  log-dead-letters = 10
+  log-dead-letters-during-shutdown = on
+}
+
+mongo-async-driver {
+  akka {
+    loggers = ["akka.event.slf4j.Slf4jLogger"]
+    loglevel = ERROR
+  }
+}
