DAC6-293 Added subscription connector and models for displaying subscription

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,6 +130,24 @@ microservice {
       host = localhost
       port = 8500
     }
+
+    business-matching {
+      host = localhost
+      port = 9757
+      protocol = http
+      startUrl = "/register-for-cross-border-arrangement-stubs"
+      bearer-token = ""
+      environment = ""
+    }
+
+    registration {
+      host = localhost
+      port = 9757
+      protocol = http
+      startUrl = "/register-for-cross-border-arrangement-stubs"
+      bearer-token = ""
+      environment = ""
+    }
   }
 }
 
