DAC6-309: Add translation and validation

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -131,7 +131,7 @@ microservice {
       port = 8500
     }
 
-    business-matching {
+    submission {
       host = localhost
       port = 9757
       protocol = http
