--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,10 @@ play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
 # Primary entry point for all HTTP requests on Play applications
 play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.backend.filters.BackendFilters"
+
+# Json error handler
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
 # Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
 # An audit connector must be provided.
@@ -32,22 +36,15 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 # Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.graphite.GraphiteMetricsModule` or create your own.
 # A metric filter must be provided
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
-play.http.filters = "uk.gov.hmrc.play.bootstrap.backend.filters.BackendFilters"
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
-
-# Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
-
-# Play Modules
-# ~~~~
-# Additional play modules can be added here
-play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
-
 
 # Secret key
 # ~~~~~
@@ -76,17 +73,6 @@ play.http.router = prod.Routes
 # By default all controllers will have authorisation, logging and
 # auditing (transaction monitoring) enabled.
 # The below controllers are the default exceptions to this rule.
-
-controllers {
-  # 300 is the default, you may need to change this according to your needs
-  confidenceLevel = 300
-
-  uk.gov.hmrc.disclosecrossborderarrangements.controllers.MicroserviceHelloWorldController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
-}
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
