make sure all headers are audited out

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,6 +89,7 @@ metrics {
 auditing {
   enabled = false
   traceRequests = true
+  auditExtraHeaders = true
   consumer {
     baseUri {
       host = localhost
