--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,5 +138,4 @@ microservice {
   }
 }
 
-play.http.parser.maxDiskBuffer = 25MB
-parsers.anyContent.maxLength = 25MB
+play.http.parser.maxMemoryBuffer=25MB
