--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
+play.modules.enabled += "config.Module"
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
@@ -100,6 +102,7 @@ auditing {
 
 mongodb {
   uri = "mongodb://localhost:27017/disclose-cross-border-arrangements"
+  timeToLiveInSeconds = 900
 }
 
 microservice {
