DAC6-874 - Move to Hmrc-Mongo instead of simple-reactivemongo

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 # Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.graphite.GraphiteMetricsModule` or create your own.
 # A metric filter must be provided
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
-play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
