DAC6-877:Update plugin and libs to Play 2.8

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,7 +91,7 @@ metrics {
 auditing {
   enabled = false
   traceRequests = true
-  auditExtraHeaders = true
+  auditSentHeaders = true
   consumer {
     baseUri {
       host = localhost
